--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "scf-website",
   "private": true,
   "version": "0.0.0",
+  "homepage": "jldev08.github.io/sage-conseil-fiscal",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "lint": "eslint .",
     "preview": "vite preview",
     "postinstall": "flowbite-react patch"
@@ -29,6 +32,7 @@
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
     "vite": "^6.3.5"
   }
