--- a/package.json
+++ b/package.json
@@ -2,13 +2,11 @@
   "name": "scf-website",
   "private": true,
   "version": "0.0.0",
-  "homepage": "jldev08.github.io/sage-conseil-fiscal",
+  "homepage": "/",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "lint": "eslint .",
     "preview": "vite preview",
     "postinstall": "flowbite-react patch"
